kubernetes/nexus-cert-config.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: nexus3
