kubernetes/ingress-ssl.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-ssl
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
  namespace: nexus3
spec:
  tls:
  - hosts:
    - nexus.wemade.com
    secretName: tlssecret
  rules:
  - host: nexus.wemade.com
    http:
      paths:
      - path: /v2
        pathType: Prefix
        backend:
          service:
            name: nexus-server
            port:
              number: 5000
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nexus-server
            port:
              number: 8081
